# kibana_test

./: README.md  docker-compose.yml  filebeat.yml  pyproject.toml  requirements.txt
app/: logging_config.py  main.py
app/routes/: api.py
docker/: app.dockerfile
