[tool.poetry]
name = "kibana-test"
version = "0.1.0"
description = ""
authors = ["genii01 <genii0627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-json-logger = "^2.0.7"
elasticsearch = "^8.10.0"
requests = "^2.31.0"
json-logging = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
